--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,6 @@ button{
     font-weight: 400;
     border: 0;
     border-radius: 15px;
-    padding: 14px 28px;
     color: #ffffff;
     background-color: #3d3e3d;
     cursor: pointer;
@@ -51,12 +50,18 @@ h1{
     font-size: 32px;
 }
 
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .logo{
     justify-content: flex-start;
     margin-left: 20px;
 }
 
 .login-btn{
+    padding: 16px 32px;
     margin-right: 20px;
 }
 
