--- a/styles.css
+++ b/styles.css
@@ -133,3 +133,10 @@ label{
     width: 35%;
     margin: 0 auto;
 }
+
+.sidebar{
+    height: 100vh;
+    width: 350px;
+    padding: 20px;
+    background-color: #fafafa;
+}
