--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,14 @@ h1{
     font-size: 32px;
 }
 
+h2{
+    font-size: 28px;
+}
+
+h3{
+    font-size: 24px;
+}
+
 a{
     color: inherit;
     text-decoration: none;
@@ -84,6 +92,10 @@ a{
 .logo{
     justify-content: flex-start;
     margin-left: 20px;
+}
+
+.logo h2{
+    color: #ffffff;
 }
 
 .login-btn{
@@ -214,8 +226,19 @@ label{
     padding: 20px
 }
 
+.dashboard-title h2,
+.dashboard-title h3{
+    margin: 0;
+}
+
+.dashboard-title h3{
+    color: #747676ab;
+}
+
 #tip-text {
+    font-style: italic;
     font-size: 18px;
+    /* font-weight: bolder; */
 }
 
 .date-display,
