--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,13 @@ a{
     transition: 0.3s ease;
 }
 
+.mobile-menu{
+    display: none;
+}
+
+.mobile-menu i{
+    font-size: 24px;
+}
 
 .hero{
     display: flex;
@@ -149,16 +156,18 @@ a{
 .signup-area{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     margin: 0 auto;
-    width: 500px
+    width: 40%;
 }
 
 .signup-area p{
     text-align: left;
 }
 
-label{
+.signup-area label {
+    text-align: left;
     margin: 12px 0;
 }
 
@@ -327,4 +336,73 @@ label{
 .task-actions i:hover{
     color: white;
     background-color: #3d3e3d;
+}
+
+/*Media Queries*/
+@media (min-width: 320px) and (max-width: 479px) {
+    h1{
+        font-size: 24px;
+    }
+
+    h2{
+        font-size: 20px;
+    }
+
+    h3{
+        font-size: 18px;
+    }
+
+    p{
+        font-size: 16px;
+    }
+
+    button{
+        font-size: 16px;
+    }
+    
+    .main-nav{
+        display: none;
+    }
+
+    .nav-links{
+        margin: 12px 0;
+    }
+
+    .login-btn{
+        width: 140px;
+    }
+
+    .mobile-menu{
+        position: absolute;
+        right: 20px;
+        display: block;
+    }
+
+    .active{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: absolute;
+        background-color: #ffffff;
+        padding: 20px;
+        top: 80px;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    .hero-content{
+        text-align: center;
+        padding: 20px;
+    }
+
+    .signup-area{
+        margin: 0 auto;
+        width: 75%;
+    }
+
+    .signup-btn{
+        width: 50%;
+    }
 }
